# ai-orchestrator-demo

./: Makefile  README.md
backend/: pyproject.toml  ruff.toml
backend/app/: logging_utils.py  main.py  settings.py
backend/app/api/: dependencies.py  error_handlers.py  workflows.py  workflows_router.py
backend/app/application/: answer_parser.py  commands.py  exceptions.py  registry.py  solution_service.py  solve_service.py  step_generator.py  workflow_service.py
backend/app/application/services/deterministic/parrot/: parrot_answer_parser.py  parrot_solution_service.py  parrot_step_generator.py
backend/app/application/services/deterministic/printer/: printer_answer_parser.py  printer_solution_service.py  printer_step_generator.py
backend/app/application/services/deterministic/printer/domain/: printer_domain.py  printer_domain_parser.py
backend/app/application/services/probabilistic/llm/: llm_answer_parser.py  llm_solution_service.py  llm_step_generator.py
backend/app/domain/: chat.py  config.py  db.py  qa.py  response.py  ticket.py  workflow.py
backend/app/infrastructure/: ticket_sources.py
backend/app/infrastructure/persistence/: ai_orchestrator.db  sqlite_workflow_repository.py  workflow_repository.py
backend/tests/: test_printer_workflow.py  test_workflow_engine.py
backend/tests/fakes/: fake_domain.py  fake_repo.py
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: workflows.ts
frontend/src/components/: App.tsx  StepInput.tsx  (+1 more)
(+17 files in other folders)
